@@ -1,25 +1,17 @@
 package com.team4.backend.controller;
 
-
-
-import com.team4.backend.dto.PaymentDto;
-import com.team4.backend.entities.Booking;
+import com.team4.backend.dto.request.PaymentRequestDto;
+import com.team4.backend.dto.response.ApiResponse;
+import com.team4.backend.dto.response.PaymentResponseDto;
 import com.team4.backend.entities.Payment;
 import com.team4.backend.mapper.PaymentMapper;
 import com.team4.backend.repository.PaymentRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import jakarta.validation.Valid;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
-import javax.swing.text.DateFormatter;
 import java.math.BigDecimal;
-import java.time.Instant;
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -28,58 +20,111 @@ import java.util.stream.Collectors;
 @RequestMapping("api/payment")
 public class PaymentController {
 
-    @Autowired
-    private PaymentRepository paymentRepository;
+    private final PaymentRepository paymentRepository;
+    private final PaymentMapper paymentMapper;
 
-    @Autowired
-    private PaymentMapper paymentMapper;
-
-
-
-    @GetMapping("")
-    public ResponseEntity<List<PaymentDto>> getAllPayments() {
-        List<Payment> payments = paymentRepository.findAll();
-        List<PaymentDto> paymentDtos = payments.stream()
-                .map(paymentMapper::toDto)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(paymentDtos);
+    public PaymentController(PaymentRepository paymentRepository, PaymentMapper paymentMapper) {
+        this.paymentRepository = paymentRepository;
+        this.paymentMapper = paymentMapper;
     }
 
+    @PostMapping("")
+    public ResponseEntity<ApiResponse<PaymentResponseDto>> addPayment(@Valid @RequestBody PaymentRequestDto paymentRequestDto) {
+        if (paymentRequestDto.id() != null && paymentRepository.existsById(paymentRequestDto.id())) {
+            return new ResponseEntity<>(
+                    ApiResponse.error(HttpStatus.BAD_REQUEST.value(), "Payment with ID " + paymentRequestDto.id() + " already exists"),
+                    HttpStatus.BAD_REQUEST
+            );
+        }
+
+        Payment payment = paymentRepository.save(paymentMapper.toEntity(paymentRequestDto));
+        return new ResponseEntity<>(
+                ApiResponse.success(HttpStatus.CREATED.value(), "Payment Created", paymentMapper.toResponseDto(payment)),
+                HttpStatus.CREATED
+        );
+    }
+
+    @PutMapping("/{id}")
+    public ResponseEntity<ApiResponse<PaymentResponseDto>> updatePayment(
+            @PathVariable Integer id,
+            @Valid @RequestBody PaymentRequestDto paymentRequestDto) {
+
+        if (!paymentRepository.existsById(id)) {
+            return new ResponseEntity<>(
+                    ApiResponse.error(HttpStatus.NOT_FOUND.value(), "Payment with ID " + id + " not found"),
+                    HttpStatus.NOT_FOUND
+            );
+        }
+
+        Payment payment = paymentMapper.toEntity(paymentRequestDto);
+        payment.setId(id);
+        Payment saved = paymentRepository.save(payment);
+
+        return ResponseEntity.ok(
+                ApiResponse.success(HttpStatus.OK.value(), "Payment updated successfully", paymentMapper.toResponseDto(saved))
+        );
+    }
+
+    @GetMapping("")
+    public ResponseEntity<ApiResponse<List<PaymentResponseDto>>> getAllPayments() {
+        List<Payment> payments = paymentRepository.findAll();
+        List<PaymentResponseDto> responseDtos = payments.stream()
+                .map(paymentMapper::toResponseDto)
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(ApiResponse.success(responseDtos));
+    }
 
     @GetMapping("/{payment_id}")
-    public ResponseEntity<PaymentDto> getPaymentById(@PathVariable("payment_id") Integer paymentId) {
+    public ResponseEntity<ApiResponse<PaymentResponseDto>> getPaymentById(@PathVariable("payment_id") Integer paymentId) {
         Optional<Payment> payment = paymentRepository.findById(paymentId);
-        return payment.map(paymentMapper::toDto)
-                .map(ResponseEntity::ok)
-                .orElseGet(() -> ResponseEntity.notFound().build());
+        return payment.map(value -> ResponseEntity.ok(ApiResponse.success(paymentMapper.toResponseDto(value))))
+                .orElseGet(() -> new ResponseEntity<>(
+                        ApiResponse.error(HttpStatus.NOT_FOUND.value(), "Payment with Id " + paymentId + " not found"),
+                        HttpStatus.NOT_FOUND));
     }
 
     @GetMapping("/customer/{customer_id}")
-    public ResponseEntity<List<PaymentDto>> getPaymentsByCustomerId(@PathVariable("customer_id") Integer customerId) {
-        List<Payment>payments = paymentRepository.findByCustomerId(customerId);
-        List<PaymentDto> paymentDtos = payments.stream().map(paymentMapper::toDto).collect(Collectors.toList());
-        return ResponseEntity.ok(paymentDtos);
+    public ResponseEntity<ApiResponse<List<PaymentResponseDto>>> getPaymentsByCustomerId(@PathVariable("customer_id") Integer customerId) {
+        List<Payment> payments = paymentRepository.findByCustomerId(customerId);
+        if (payments.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiResponse.error(404, "Payments for customer " + customerId + " not found"));
+        }
+        List<PaymentResponseDto> dtos = payments.stream().map(paymentMapper::toResponseDto).toList();
+        return ResponseEntity.ok(ApiResponse.success(dtos));
     }
 
     @GetMapping("/booking/{booking_id}")
-    public ResponseEntity<List<PaymentDto>> getPaymentsByBookingId(@PathVariable("booking_id") Integer bookingId) {
-        List<Payment>payments = paymentRepository.findByBookingId(bookingId);
-        List<PaymentDto> paymentDtos = payments.stream().map(paymentMapper::toDto).collect(Collectors.toList());
-        return ResponseEntity.ok(paymentDtos);
+    public ResponseEntity<ApiResponse<List<PaymentResponseDto>>> getPaymentsByBookingId(@PathVariable("booking_id") Integer bookingId) {
+        List<Payment> payments = paymentRepository.findByBookingId(bookingId);
+        if (payments.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiResponse.error(404, "Payments for booking " + bookingId + " not found"));
+        }
+        List<PaymentResponseDto> dtos = payments.stream().map(paymentMapper::toResponseDto).toList();
+        return ResponseEntity.ok(ApiResponse.success(dtos));
     }
 
     @GetMapping("/amount/{amount}")
-    public ResponseEntity<List<PaymentDto>> getPaymentsByAmount(@PathVariable("amount") BigDecimal amount) {
-        List<Payment>payments = paymentRepository.findByAmount(amount);
-        List<PaymentDto> paymentDtos = payments.stream().map(paymentMapper::toDto).collect(Collectors.toList());
-        return ResponseEntity.ok(paymentDtos);
+    public ResponseEntity<ApiResponse<List<PaymentResponseDto>>> getPaymentsByAmount(@PathVariable("amount") BigDecimal amount) {
+        List<Payment> payments = paymentRepository.findByAmount(amount);
+        if (payments.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiResponse.error(404, "Payments with amount " + amount + " not found"));
+        }
+        List<PaymentResponseDto> dtos = payments.stream().map(paymentMapper::toResponseDto).toList();
+        return ResponseEntity.ok(ApiResponse.success(dtos));
     }
+
     @GetMapping("/status/{payment_status}")
-    public ResponseEntity<List<PaymentDto>> getPaymentsByStatus(@PathVariable("payment_status") String paymentStatus) {
-        List<Payment>payments = paymentRepository.findByPaymentStatus(paymentStatus);
-        List<PaymentDto> paymentDtos = payments.stream().map(paymentMapper::toDto).collect(Collectors.toList());
-        return ResponseEntity.ok(paymentDtos);
+    public ResponseEntity<ApiResponse<List<PaymentResponseDto>>> getPaymentsByStatus(@PathVariable("payment_status") String paymentStatus) {
+        List<Payment> payments = paymentRepository.findByPaymentStatus(paymentStatus);
+        if (payments.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                    .body(ApiResponse.error(404, "Payments with status " + paymentStatus + " not found"));
+        }
+        List<PaymentResponseDto> dtos = payments.stream().map(paymentMapper::toResponseDto).toList();
+        return ResponseEntity.ok(ApiResponse.success(dtos));
     }
-
-
 }
