@@ -1,19 +1,18 @@
 package com.team4.backend.controller;
 
-import com.team4.backend.dto.ReviewDto;
+import com.team4.backend.dto.request.ReviewRequestDto;
+import com.team4.backend.dto.response.ApiResponse;
+import com.team4.backend.dto.response.ReviewResponseDto;
 import com.team4.backend.entities.Review;
 import com.team4.backend.mapper.ReviewMapper;
 import com.team4.backend.repository.ReviewRepository;
+import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.time.Instant;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -21,104 +20,139 @@ import java.util.stream.Collectors;
 @RestController
 @RequestMapping("api/reviews")
 public class ReviewController {
+
     @Autowired
     private ReviewRepository reviewRepository;
+
     @Autowired
     private ReviewMapper reviewMapper;
 
     @GetMapping("")
-    public ResponseEntity<List<ReviewDto>> getAllReview(){
-        List<Review> reviews = reviewRepository.findAll();
-        List<ReviewDto> reviewDtos = reviews.stream()
-                .map(review -> reviewMapper.toDto(review))
-                .toList();
-        return new ResponseEntity<>(reviewDtos, HttpStatus.OK);
+    public ResponseEntity<ApiResponse<List<ReviewResponseDto>>> getAllReviews() {
+        List<ReviewResponseDto> dtos = reviewRepository.findAll()
+                .stream()
+                .map(reviewMapper::toResponseDto)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(ApiResponse.success(dtos));
     }
 
     @GetMapping("/{review_id}")
-    public ResponseEntity<ReviewDto> getReviewById(@PathVariable("review_id") int review_id){
-        Optional<Review> review = reviewRepository.findById(review_id);
-        if(review.isPresent()){
-            ReviewDto reviewDto = reviewMapper.toDto(review.get());
-            return new ResponseEntity<>(reviewDto, HttpStatus.OK);
-        }
-        return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+    public ResponseEntity<ApiResponse<ReviewResponseDto>> getReviewById(@PathVariable("review_id") int reviewId) {
+        Optional<Review> review = reviewRepository.findById(reviewId);
+        return review.map(r -> ResponseEntity.ok(ApiResponse.success(reviewMapper.toResponseDto(r))))
+                .orElseGet(() -> new ResponseEntity<>(
+                        ApiResponse.error(HttpStatus.NOT_FOUND.value(), "Review with ID " + reviewId + " not found"),
+                        HttpStatus.NOT_FOUND));
     }
 
-
     @GetMapping("/tripid/{trip_id}")
-    public ResponseEntity<List<ReviewDto>> getReviewsByTripId(@PathVariable("trip_id") Integer tripId) {
-        List<ReviewDto> dtos = reviewRepository.findByTripId(tripId)
+    public ResponseEntity<ApiResponse<List<ReviewResponseDto>>> getReviewsByTripId(@PathVariable("trip_id") Integer tripId) {
+        List<ReviewResponseDto> dtos = reviewRepository.findByTripId(tripId)
                 .stream()
-                .map(reviewMapper::toDto)
+                .map(reviewMapper::toResponseDto)
                 .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(ApiResponse.success(dtos));
     }
 
     @GetMapping("/customerid/{customer_id}")
-    public ResponseEntity<List<ReviewDto>> getReviewsByCustomerId(@PathVariable("customer_id") Integer customerId) {
-        List<ReviewDto> dtos = reviewRepository.findByCustomerId(customerId)
+    public ResponseEntity<ApiResponse<List<ReviewResponseDto>>> getReviewsByCustomerId(@PathVariable("customer_id") Integer customerId) {
+        List<ReviewResponseDto> dtos = reviewRepository.findByCustomerId(customerId)
                 .stream()
-                .map(reviewMapper::toDto)
+                .map(reviewMapper::toResponseDto)
                 .collect(Collectors.toList());
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(ApiResponse.success(dtos));
     }
 
     @GetMapping("/rating/{rating}")
-    public ResponseEntity<List<ReviewDto>> getReviewsByRating(@PathVariable("rating") Integer rating) {
-        List<ReviewDto> dtos = reviewRepository.findByRating(rating)
+    public ResponseEntity<ApiResponse<List<ReviewResponseDto>>> getReviewsByRating(@PathVariable("rating") Integer rating) {
+        List<ReviewResponseDto> dtos = reviewRepository.findByRating(rating)
                 .stream()
-                .map(reviewMapper::toDto)
+                .map(reviewMapper::toResponseDto)
                 .collect(Collectors.toList());
-
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(ApiResponse.success(dtos));
     }
-    @GetMapping("/gt/{rating}")
-    public ResponseEntity<List<ReviewDto>> getReviewsWithRatingGreaterThan(@PathVariable("rating") Integer rating) {
-        List<ReviewDto> dtos = reviewRepository.findByRatingGreaterThan(rating)
-                .stream()
-                .map(reviewMapper::toDto)
-                .collect(Collectors.toList());
 
-        return ResponseEntity.ok(dtos);
+    @GetMapping("/gt/{rating}")
+    public ResponseEntity<ApiResponse<List<ReviewResponseDto>>> getReviewsWithRatingGreaterThan(@PathVariable("rating") Integer rating) {
+        List<ReviewResponseDto> dtos = reviewRepository.findByRatingGreaterThan(rating)
+                .stream()
+                .map(reviewMapper::toResponseDto)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(ApiResponse.success(dtos));
     }
 
     @GetMapping("/lt/{rating}")
-    public ResponseEntity<List<ReviewDto>> getReviewsWithRatingLessThan(@PathVariable("rating") Integer rating) {
-        List<ReviewDto> dtos = reviewRepository.findByRatingLessThan(rating)
+    public ResponseEntity<ApiResponse<List<ReviewResponseDto>>> getReviewsWithRatingLessThan(@PathVariable("rating") Integer rating) {
+        List<ReviewResponseDto> dtos = reviewRepository.findByRatingLessThan(rating)
                 .stream()
-                .map(reviewMapper::toDto)
+                .map(reviewMapper::toResponseDto)
                 .collect(Collectors.toList());
-
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(ApiResponse.success(dtos));
     }
-
 
     @GetMapping("/customer/{customer_id}/trip/{trip_id}")
-    public ResponseEntity<List<ReviewDto>> getReviewsByCustomerAndTrip(
+    public ResponseEntity<ApiResponse<List<ReviewResponseDto>>> getReviewsByCustomerAndTrip(
             @PathVariable("customer_id") Integer customerId,
             @PathVariable("trip_id") Integer tripId) {
-
-        List<ReviewDto> dtos = reviewRepository.findByCustomerIdAndTripId(customerId, tripId)
+        List<ReviewResponseDto> dtos = reviewRepository.findByCustomerIdAndTripId(customerId, tripId)
                 .stream()
-                .map(reviewMapper::toDto)
+                .map(reviewMapper::toResponseDto)
                 .collect(Collectors.toList());
-
-        return ResponseEntity.ok(dtos);
+        return ResponseEntity.ok(ApiResponse.success(dtos));
     }
+
     @GetMapping("/date/{reviewDate}")
-    public ResponseEntity<List<ReviewDto>> getReviewsByReviewDate(@PathVariable("reviewDate") String reviewDateStr) {
+    public ResponseEntity<ApiResponse<List<ReviewResponseDto>>> getReviewsByReviewDate(@PathVariable("reviewDate") String reviewDateStr) {
         try {
             Instant reviewDate = Instant.parse(reviewDateStr);
-            List<ReviewDto> dtos = reviewRepository.findByReviewDate(reviewDate)
+            List<ReviewResponseDto> dtos = reviewRepository.findByReviewDate(reviewDate)
                     .stream()
-                    .map(reviewMapper::toDto)
+                    .map(reviewMapper::toResponseDto)
                     .collect(Collectors.toList());
-
-            return ResponseEntity.ok(dtos);
+            return ResponseEntity.ok(ApiResponse.success(dtos));
         } catch (Exception e) {
-            return ResponseEntity.badRequest().build();
+            return ResponseEntity.badRequest().body(ApiResponse.error(400, "Invalid date format: " + reviewDateStr));
         }
     }
 
+    @PostMapping("")
+    public ResponseEntity<ApiResponse<ReviewResponseDto>> addReview(@Valid @RequestBody ReviewRequestDto reviewRequestDto) {
+        if (reviewRequestDto.id() != null && reviewRepository.existsById(reviewRequestDto.id())) {
+            return new ResponseEntity<>(
+                    ApiResponse.error(HttpStatus.BAD_REQUEST.value(), "Review with ID " + reviewRequestDto.id() + " already exists"),
+                    HttpStatus.BAD_REQUEST
+            );
+        }
+
+        Review review = reviewRepository.save(reviewMapper.toEntity(reviewRequestDto));
+        return new ResponseEntity<>(
+                ApiResponse.success(
+                        HttpStatus.CREATED.value(),
+                        "Review Created",
+                        reviewMapper.toResponseDto(review)
+                ),
+                HttpStatus.CREATED
+        );
+    }
+
+    @PutMapping("/{id}")
+    public ResponseEntity<ApiResponse<ReviewResponseDto>> updateReview(
+            @PathVariable Integer id,
+            @Valid @RequestBody ReviewRequestDto reviewRequestDto) {
+
+        if (!reviewRepository.existsById(id)) {
+            return new ResponseEntity<>(
+                    ApiResponse.error(HttpStatus.NOT_FOUND.value(), "Review with ID " + id + " not found"),
+                    HttpStatus.NOT_FOUND
+            );
+        }
+
+        Review review = reviewMapper.toEntity(reviewRequestDto);
+        review.setId(id);
+        Review saved = reviewRepository.save(review);
+
+        return ResponseEntity.ok(
+                ApiResponse.success(HttpStatus.OK.value(), "Review updated successfully", reviewMapper.toResponseDto(saved))
+        );
+    }
 }
